fix weird spacing issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,35 +3,28 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Open Sans", Helvetica,
     sans-serif;
-  text-align: center;
-  margin: 0;
-  background: url("https://www.toptal.com/designers/subtlepatterns/patterns/spiration-light.png")
+  background: url("https://www.toptal.com/designers/subtlepatterns/patterns/what-the-hex.png");
 }
 
 img {
-  max-height: 150px;
-  margin: auto;
-  display: inline-block;
+  max-height: 200px;
 }
 
 .wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .card {
-  display: inline-block;
   width: 300px;
   padding: 1em;
   border-radius: 15px;
   margin: 10px;
   background: #ddd;
-  text-align: left;
   box-shadow: 0px 5px 20px -10px #111;
   position: relative;
   transition: 0.4s;
-}
-
-.card img {
-  height: 150px;
 }
 
 .card-title {
@@ -56,13 +49,13 @@ img {
 }
 
 .card-caption {
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.666);
   padding: 1em;
   position: relative;
   border-radius: 0 0 3px 3px;
 }
 .card-image-container {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.666);
   text-align: center;
   padding: 1em 1em 0;
   border-radius: 3px 3px 0 0;
